--- a/src/daterangepicker.slate.css
+++ b/src/daterangepicker.slate.css
@@ -1,47 +1,74 @@
-.date-picker-wrapper {
+.date-picker,
+.date-picker
+{
+	font-size: 12px;
+	font-family: Arial,sans-serif;
+	width: 170px;
+	height: 25px;
+	padding: 0 0 0 10px;
+	border: 0;
+	line-height: 25px;
+	font-weight: 700;
+	cursor: pointer;
+	color: #303030;
+	position: relative;
+	z-index: 2;
+}
+.date-picker-wrapper
+{
 	position: absolute;
 	z-index: 1;
 	border: 1px solid #456;
 	background-color: #123;
 	padding: 5px 12px;
-	font-size: 12px;
 	line-height: 20px;
-	font-family: Arial,sans-serif;
+	color: inherit;
 	box-shadow: 0 0 8px rgba(160,192,255,0.5);
 }
-.date-picker-wrapper * {
+.date-picker-wrapper,
+.date-picker-wrapper *
+{
 	box-sizing: initial;
 }
-.date-picker-wrapper.inline-wrapper {
+.date-picker-wrapper.inline-wrapper
+{
 	position: relative;
 	box-shadow: none;
 	display: inline-block;
 }
-.date-picker-wrapper.single-date {
+.date-picker-wrapper.single-date
+{
 	width: auto;
 }
-.date-picker-wrapper.no-shortcuts {
+.date-picker-wrapper.no-shortcuts
+{
 	padding-bottom: 12px;
 }
-.date-picker-wrapper.no-topbar {
+.date-picker-wrapper.no-topbar
+{
 	padding-top: 12px;
 }
-.date-picker-wrapper .footer {
+.date-picker-wrapper .footer
+{
 	font-size: 11px;
 	padding-top: 3px;
 }
-.date-picker-wrapper b {
+.date-picker-wrapper b
+{
 	color: #789;
 	font-weight: 700;
 }
-.date-picker-wrapper a {
+.date-picker-wrapper a
+{
 	color: #6AE;
 	text-decoration: underline;
 }
-.date-picker-wrapper .month-name {
+.date-picker-wrapper .month-name
+{
 	text-transform: uppercase;
 }
-.date-picker-wrapper .month-wrapper {
+.date-picker-wrapper .month-wrapper
+{
 	border: 1px solid #567;
 	border-radius: 3px;
 	background-color: #234;
@@ -51,28 +78,28 @@
 	_overflow: hidden;
 	box-shadow: 0 0 16px rgba(160,192,255,0.3);
 }
-.date-picker-wrapper .month-wrapper table {
-	width: 190px;
+.date-picker-wrapper .month-wrapper table
+{
+	width: 196px;
 	float: left;
 	background-color: transparent;
 }
-.date-picker-wrapper .month-wrapper table.month2 {
-	width: 190px;
-	float: left;
-}
 .date-picker-wrapper .month-wrapper table th,
-.date-picker-wrapper .month-wrapper table td {
+.date-picker-wrapper .month-wrapper table td
+{
 	vertical-align: middle;
 	text-align: center;
 	line-height: 14px;
 	min-width: 24px;
-	margin: 0px;
-	padding: 0px;
+	margin: 0;
+	padding: 0;
 }
-.date-picker-wrapper .month-wrapper table div:hover {
+.date-picker-wrapper .month-wrapper table div:hover
+{
 	background: #345;
 }
-.date-picker-wrapper .month-wrapper table .day {
+.date-picker-wrapper .month-wrapper table .day
+{
 	padding: 5px 0;
 	line-height: 1;
 	font-size: 12px;
@@ -81,103 +108,125 @@
 	cursor: default;
 }
 .date-picker-wrapper .month-wrapper table div.day.lastMonth,
-.date-picker-wrapper .month-wrapper table div.day.nextMonth {
+.date-picker-wrapper .month-wrapper table div.day.nextMonth
+{
 	color: #456;
 	cursor: default;
 }
-.date-picker-wrapper .month-wrapper table .day.checked {
+.date-picker-wrapper .month-wrapper table .day.checked
+{
 	background-color: #258;
 }
 .date-picker-wrapper .month-wrapper table .day.invalid.hovering,
-.date-picker-wrapper .month-wrapper table .day.invalid.checked {
+.date-picker-wrapper .month-wrapper table .day.invalid.checked
+{
 	color: #222;
 }
-.date-picker-wrapper .month-wrapper table .invalid:hover {
+.date-picker-wrapper .month-wrapper table .invalid:hover
+{
 	background: transparent;
 }
-.date-picker-wrapper .month-wrapper table .week-name {
+.date-picker-wrapper .month-wrapper table .week-name
+{
 	height: 20px;
 	line-height: 20px;
 	font-weight: 100;
 	text-transform: uppercase;
 }
-.date-picker-wrapper .month-wrapper table .day.has-tooltip {
+.date-picker-wrapper .month-wrapper table .day.has-tooltip
+{
 	cursor: help !important;
 }
-.date-picker-wrapper .time label {
+.date-picker-wrapper .time label
+{
 	white-space: nowrap;
 }
-.date-picker-wrapper .month-wrapper table .day.toMonth.valid {
+.date-picker-wrapper .month-wrapper table .day.toMonth.valid
+{
 	color: #ACE;
 	cursor: pointer;
 }
-.date-picker-wrapper .month-wrapper table .day.toMonth.hovering {
+.date-picker-wrapper .month-wrapper table .day.toMonth.hovering
+{
 	background-color: #369;
 }
+.date-picker-wrapper .month-wrapper table .day.toMonth.valid.weekend
+{
+	color: #9DD;
+}
 .date-picker-wrapper .month-wrapper table .day.nextMonth,
-.date-picker-wrapper .month-wrapper table .day.lastMonth {
+.date-picker-wrapper .month-wrapper table .day.lastMonth
+{
 	display: none;
 }
-.date-picker-wrapper .month-wrapper table .day.real-today {
+.date-picker-wrapper .month-wrapper table .day.real-today
+{
 	background-color: #55F;
 }
 .date-picker-wrapper .month-wrapper table .day.real-today.checked,
-.date-picker-wrapper .month-wrapper table .day.real-today.hovering {
+.date-picker-wrapper .month-wrapper table .day.real-today.hovering
+{
 	background-color: #77F;
 }
-.date-picker-wrapper table .caption {
+.date-picker-wrapper table .caption
+{
 	height: 40px;
 }
 .date-picker-wrapper table .caption .next,
-.date-picker-wrapper table .caption .prev {
+.date-picker-wrapper table .caption .prev
+{
 	padding: 0 5px;
 	cursor: pointer;
 }
 .date-picker-wrapper table .caption .next:hover,
-.date-picker-wrapper table .caption .prev:hover {
+.date-picker-wrapper table .caption .prev:hover
+{
 	background-color: #6AE;
 	color: white;
 }
-.date-picker-wrapper .gap {
+.date-picker-wrapper .gap
+{
 	position: relative;
 	z-index: 1;
-	width: 15px;
-	height: 100%;
+	width: 12px;
 	background-color: red;
 	font-size: 0;
 	line-height: 0;
 	float: left;
 	top: -5px;
-	margin: 0 10px -10px;
+	margin: 0 8px -8px;
 	visibility: hidden;
 	height: 0;
 }
-.date-picker-wrapper .gap .gap-lines {
+.date-picker-wrapper .gap .gap-lines
+{
 	height: 100%;
 	overflow: hidden;
 }
-.date-picker-wrapper .gap .gap-line {
-	height: 15px;
-	width: 15px;
+.date-picker-wrapper .gap .gap-line
+{
 	position: relative;
 }
-.date-picker-wrapper .gap .gap-line .gap-1 {
+.date-picker-wrapper .gap .gap-line .gap-1
+{
 	z-index: 1;
 	height: 0;
 	border-left: 8px solid #234;
 	border-top: 8px solid #345;
 	border-bottom: 8px solid #345;
 }
-.date-picker-wrapper .gap .gap-line .gap-2 {
+.date-picker-wrapper .gap .gap-line .gap-2
+{
 	position: absolute;
 	right: 0;
-	top: 0px;
+	top: 0;
 	z-index: 2;
 	height: 0;
 	border-left: 8px solid transparent;
 	border-top: 8px solid #234;
 }
-.date-picker-wrapper .gap .gap-line .gap-3 {
+.date-picker-wrapper .gap .gap-line .gap-3
+{
 	position: absolute;
 	right: 0;
 	top: 8px;
@@ -186,8 +235,9 @@
 	border-left: 8px solid transparent;
 	border-bottom: 8px solid #234;
 }
-.date-picker-wrapper .gap .gap-top-mask {
-	width: 6px;
+.date-picker-wrapper .gap .gap-top-mask
+{
+	width: 8px;
 	height: 1px;
 	position: absolute;
 	top: -1px;
@@ -195,112 +245,132 @@
 	background-color: #345;
 	z-index: 3;
 }
-.date-picker-wrapper .gap .gap-bottom-mask {
-	width: 6px;
+.date-picker-wrapper .gap .gap-bottom-mask
+{
+	width: 8px;
 	height: 1px;
 	position: absolute;
 	bottom: -1px;
-	left: 7px;
+	left: 1px;
 	background-color: #345;
 	z-index: 3;
 }
-.date-picker-wrapper .selected-days {
+.date-picker-wrapper .selected-days
+{
 	display: none;
 }
-.date-picker-wrapper .drp_top-bar {
+.date-picker-wrapper .drp_top-bar
+{
 	line-height: 1.4;
 	position: relative;
 	padding: 10px 40px 10px 0;
 }
-.date-picker-wrapper .drp_top-bar .error-top {
+.date-picker-wrapper .drp_top-bar .error-top
+{
 	display: none;
 }
-.date-picker-wrapper .drp_top-bar .normal-top {
+.date-picker-wrapper .drp_top-bar .normal-top
+{
 	display: none;
 }
-.date-picker-wrapper .drp_top-bar .default-top {
+.date-picker-wrapper .drp_top-bar .default-top
+{
 	display: block;
 }
-.date-picker-wrapper .drp_top-bar.error .default-top {
+.date-picker-wrapper .drp_top-bar.error .default-top
+{
 	display: none;
 }
-.date-picker-wrapper .drp_top-bar.error .error-top {
+.date-picker-wrapper .drp_top-bar.error .error-top
+{
 	display: block;
 	color: red;
 }
-.date-picker-wrapper .drp_top-bar.normal .default-top {
+.date-picker-wrapper .drp_top-bar.normal .default-top
+{
 	display: none;
 }
-.date-picker-wrapper .drp_top-bar.normal .normal-top {
+.date-picker-wrapper .drp_top-bar.normal .normal-top
+{
 	display: block;
 }
-.date-picker-wrapper .drp_top-bar .apply-btn {
+.date-picker-wrapper .drp_top-bar .apply-btn
+{
 	position: absolute;
-	right: 0px;
+	right: 0;
 	top: 6px;
 	padding: 3px 5px;
 	margin: 0;
 	font-size: 12px;
 	border-radius: 4px;
 	cursor: pointer;
-	color: #d9eef7;
-	border: solid 1px #0076a3;
-	background: #0095cd;
-	background: -webkit-gradient(linear, left top, left bottom, from(#00adee), to(#0078a5));
-	background: -moz-linear-gradient(top, #00adee, #0078a5);
-	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00adee', endColorstr='#0078a5');
-	color: white;
+	border: solid 1px #058;
+	background: #09C;
+	box-shadow: inset -1px -2px 6px #049;
+	color: #DEF;
 	line-height: initial;
 }
-.date-picker-wrapper .drp_top-bar .apply-btn.disabled {
-	cursor: pointer;
+.date-picker-wrapper .drp_top-bar .apply-btn:disabled
+{
+	cursor: initial;
 	color: #606060;
-	border: solid 1px #b7b7b7;
-	background: #fff;
-	background: -webkit-gradient(linear, left top, left bottom, from(#fff), to(#ededed));
-	background: -moz-linear-gradient(top, #fff, #ededed);
-	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#ededed');
+	border: solid 1px #456;
+	background: #234;
+	box-shadow: inset -1px -2px 6px #444;
 }
 /*time styling*/
-.date-picker-wrapper .time {
+.date-picker-wrapper .time
+{
 	position: relative;
 }
-.date-picker-wrapper.single-month .time {
+.date-picker-wrapper.single-month .time
+{
 	display: block;
 }
-.date-picker-wrapper .time input[type=range] {
+.date-picker-wrapper .time input[type=range]
+{
 	vertical-align: middle;
 	width: 129px;
 	padding: 0;
 	margin: 0;
 	height: 20px;
 }
-.date-picker-wrapper .time1, .time2 {
+.date-picker-wrapper .time1,
+.date-picker-wrapper .time2
+{
 	width: 180px;
 	padding: 0 5px;
 	text-align: center;
 }
-.date-picker-wrapper .time1 {
+.date-picker-wrapper .time1
+{
 	float: left;
 }
-.date-picker-wrapper .time2 {
+.date-picker-wrapper .time2
+{
 	float: right;
 }
-.date-picker-wrapper .hour, .minute {
+.date-picker-wrapper .hour,
+.date-picker-wrapper .minute
+{
 	text-align: right;
 }
-.date-picker-wrapper .hide {
+.date-picker-wrapper .hide
+{
 	display: none;
 }
-.date-picker-wrapper .first-date-selected {
+.date-picker-wrapper .first-date-selected
+{
 	background-color: #48A !important;
 	color: white !important;
 }
-.date-picker-wrapper .last-date-selected {
+.date-picker-wrapper .last-date-selected
+{
 	background-color: #48A !important;
 	color: white !important;
 }
-.date-picker-wrapper .date-range-length-tip {
+.date-picker-wrapper .date-range-length-tip
+{
 	position: absolute;
 	margin-top: -4px;
 	margin-left: -8px;
@@ -313,13 +383,9 @@
 	border-radius: 3px;
 	font-size: 12px;
 	line-height: 16px;
-	-webkit-filter: drop-shadow(0 0 3px rgba(0,0,0,.3));
-	-moz-filter: drop-shadow(0 0 3px rgba(0,0,0,.3));
-	-ms-filter: drop-shadow(0 0 3px rgba(0,0,0,.3));
-	-o-filter: drop-shadow(0 0 3px rgba(0,0,0,.3));
-	filter: drop-shadow(0 0 3px rgba(0,0,0,.3));
 }
-.date-picker-wrapper .date-range-length-tip:after {
+.date-picker-wrapper .date-range-length-tip:after
+{
 	content: '';
 	position: absolute;
 	border-left: 4px solid transparent;
@@ -330,10 +396,12 @@
 	bottom: -4px;
 }
 .date-picker-wrapper.two-months.no-gap .month1 .next,
-.date-picker-wrapper.two-months.no-gap .month2 .prev {
+.date-picker-wrapper.two-months.no-gap .month2 .prev
+{
 	display: none;
 }
-.date-picker-wrapper .week-number {
+.date-picker-wrapper .week-number
+{
 	padding: 5px 0;
 	line-height: 1;
 	font-size: 12px;
@@ -341,7 +409,8 @@
 	color: #888;
 	cursor: pointer;
 }
-.date-picker-wrapper .week-number.week-number-selected {
+.date-picker-wrapper .week-number.week-number-selected
+{
 	color: #49E;
 	background: #456;
 	font-weight: bold;
