Improve demo page; confirm browser support; improve bower and npm package descriptions.

--- a/src/daterangepicker.css
+++ b/src/daterangepicker.css
@@ -169,7 +169,7 @@
 	position: relative;
 	z-index: 1;
 	width: 12px;
-	background-color: red;
+	/*background-color: red;*/
 	font-size: 0;
 	line-height: 0;
 	float: left;
