--- a/src/daterangepicker.slate.css
+++ b/src/daterangepicker.slate.css
@@ -140,6 +140,11 @@
 .date-picker-wrapper .time label
 {
 	white-space: nowrap;
+	display: initial;
+}
+.date-picker-wrapper .time input
+{
+	display: initial;
 }
 .date-picker-wrapper .month-wrapper table .day.toMonth.valid
 {
@@ -310,13 +315,12 @@
 	color: #DEF;
 	line-height: initial;
 }
-.date-picker-wrapper .drp_top-bar .apply-btn:disabled
+.date-picker-wrapper .drp_top-bar .apply-btn.disabled
 {
-	cursor: initial;
-	color: #606060;
+	color: #8AE;
 	border: solid 1px #456;
-	background: #234;
-	box-shadow: inset -1px -2px 6px #444;
+	background: #246;
+	box-shadow: inset -1px -2px 6px #69C;
 }
 /*time styling*/
 .date-picker-wrapper .time
