--- a/src/daterangepicker.slate.delta.css
+++ b/src/daterangepicker.slate.delta.css
@@ -50,6 +50,14 @@
 {
 	color: #222;
 }
+.date-picker-wrapper .time label
+{
+	display: initial;
+}
+.date-picker-wrapper .time input
+{
+	display: initial;
+}
 .date-picker-wrapper .month-wrapper table .day.toMonth.valid
 {
 	color: #ACE;
@@ -106,11 +114,12 @@
 	box-shadow: inset -1px -2px 6px #049;
 	color: #DEF;
 }
-.date-picker-wrapper .drp_top-bar .apply-btn:disabled
+.date-picker-wrapper .drp_top-bar .apply-btn.disabled
 {
+	color: #8AE;
 	border: solid 1px #456;
-	background: #234;
-	box-shadow: inset -1px -2px 6px #444;
+	background: #246;
+	box-shadow: inset -1px -2px 6px #69C;
 }
 .date-picker-wrapper .first-date-selected
 {
