--- a/src/daterangepicker.css
+++ b/src/daterangepicker.css
@@ -79,7 +79,7 @@ body {
 {
 	width: 27px;
 }
-.date-picker-wrapper .month-wrapper table tbody div:hover
+.date-picker-wrapper .month-wrapper table tbody td>div:hover
 {
 	background: #EEE;
 }
@@ -103,11 +103,36 @@ body {
 	background-color: #9cdbf7;
 }
 .date-picker-wrapper .month-wrapper table .day.invalid.hovering,
-.date-picker-wrapper .month-wrapper table .day.invalid.checked
+.date-picker-wrapper .month-wrapper table .day.invalid.checked,
+.date-picker-wrapper .month-wrapper table .day.unselectable.hovering,
+.date-picker-wrapper .month-wrapper table .day.unselectable.checked
 {
-	color: #ACF;
+	color: #900 !important;
+	background-color: #DA7;
 }
-.date-picker-wrapper .month-wrapper table .invalid:hover
+.date-picker-wrapper .month-wrapper table .day.invalid.range-start,
+.date-picker-wrapper .month-wrapper table .day.invalid.range-end,
+.date-picker-wrapper .month-wrapper table .day.unselectable.range-start,
+.date-picker-wrapper .month-wrapper table .day.unselectable.range-end
+{
+	background-color: #D73 !important;
+}
+.date-picker-wrapper .month-wrapper table .day.skipped.hovering,
+.date-picker-wrapper .month-wrapper table .day.skipped.checked
+{
+	color: #CCF !important;
+	background-color: #DEF;
+}
+.date-picker-wrapper .month-wrapper table .invalid,
+.date-picker-wrapper .month-wrapper table .unselectable,
+.date-picker-wrapper .month-wrapper table .skipped
+{
+	color: #CCC !important;
+	cursor: default !important;
+}
+.date-picker-wrapper .month-wrapper table .invalid:hover,
+.date-picker-wrapper .month-wrapper table .unselectable:hover,
+.date-picker-wrapper .month-wrapper table .skipped:hover
 {
 	background: transparent;
 }
@@ -117,14 +142,6 @@ body {
 	line-height: 20px;
 	font-weight: 100;
 	text-transform: uppercase;
-}
-.date-picker-wrapper .month-wrapper table .day.has-tooltip
-{
-	cursor: help !important;
-}
-.date-picker-wrapper .time label
-{
-	white-space: nowrap;
 }
 .date-picker-wrapper .month-wrapper table .day.toMonth.valid
 {
@@ -151,7 +168,39 @@ body {
 .date-picker-wrapper .month-wrapper table .day.real-today.checked,
 .date-picker-wrapper .month-wrapper table .day.real-today.hovering
 {
-	background-color: #70ccd5;
+	background-color: #4AC;
+}
+.date-picker-wrapper .month-wrapper table .day.real-today.invalid.checked,
+.date-picker-wrapper .month-wrapper table .day.real-today.invalid.hovering
+{
+	background-color: #A75;
+}
+.date-picker-wrapper .month-wrapper table .range-start,
+.date-picker-wrapper .month-wrapper table .range-end
+{
+	background-color: #49e !important;
+	color: white !important;
+}
+.date-picker-wrapper .month-wrapper table .week-number
+{
+	padding: 5px 0;
+	line-height: 1;
+	font-size: 12px;
+	margin-bottom: 1px;
+	color: #999;
+	cursor: pointer;
+}
+.date-picker-wrapper .month-wrapper table .week-ranged
+{
+	color: #4499EE;
+	font-weight: bold;
+	background: #DEF;
+}
+.date-picker-wrapper .month-wrapper table .week-ranged.invalid,
+.date-picker-wrapper .month-wrapper table .week-ranged.unselectable
+{
+	color: #C66 !important;
+	background: #FCA;
 }
 .date-picker-wrapper table .caption
 {
@@ -314,56 +363,9 @@ body {
 	background: white;
 	box-shadow: inset -1px -2px 6px #DDD;
 }
-/*time styling*/
-.date-picker-wrapper .time
-{
-	position: relative;
-}
-.date-picker-wrapper.single-month .time
-{
-	display: block;
-}
-.date-picker-wrapper .time input[type=range]
-{
-	vertical-align: middle;
-	width: 129px;
-	padding: 0;
-	margin: 0;
-	height: 20px;
-}
-.date-picker-wrapper .time1,
-.date-picker-wrapper .time2
-{
-	width: 180px;
-	padding: 0 5px;
-	text-align: center;
-}
-.date-picker-wrapper .time1
-{
-	float: left;
-}
-.date-picker-wrapper .time2
-{
-	float: right;
-}
-.date-picker-wrapper .hour,
-.date-picker-wrapper .minute
-{
-	text-align: right;
-}
 .date-picker-wrapper .hide
 {
 	display: none;
-}
-.date-picker-wrapper .first-date-selected
-{
-	background-color: #49e !important;
-	color: white !important;
-}
-.date-picker-wrapper .last-date-selected
-{
-	background-color: #49e !important;
-	color: white !important;
 }
 .date-picker-wrapper .date-range-length-tip
 {
@@ -393,21 +395,6 @@ body {
 .date-picker-wrapper.two-months.no-gap .month2 .prev
 {
 	display: none;
-}
-.date-picker-wrapper .week-number
-{
-	padding: 5px 0;
-	line-height: 1;
-	font-size: 12px;
-	margin-bottom: 1px;
-	color: #999;
-	cursor: pointer;
-}
-.date-picker-wrapper .week-number.week-number-selected
-{
-	color: #4499EE;
-	font-weight: bold;
-	background: #DEF;
 }
 .date-picker-wrapper div.shortcuts {
 	white-space: nowrap;
