--- a/src/daterangepicker.slate.css
+++ b/src/daterangepicker.slate.css
@@ -7,12 +7,14 @@ body {
 	font-family: Arial,sans-serif;
 	position: absolute;
 	z-index: 1;
-	border: 1px solid #bfbfbf;
-	background-color: #efefef;
+	border: 1px solid #456;
+	background-color: #123;
 	padding: 5px 12px;
 	line-height: 20px;
 	color: #aaa;
-	box-shadow: 3px 3px 10px rgba(0,0,0,0.5);
+	box-shadow: 0 0 8px #036;
+	display: none;
+	color: inherit;
 }
 .date-picker-wrapper,
 .date-picker-wrapper *
@@ -24,10 +26,6 @@ body {
 	position: relative;
 	box-shadow: none;
 	display: inline-block;
-}
-.date-picker-wrapper.single-date
-{
-	width: auto;
 }
 .date-picker-wrapper.no-topbar
 {
@@ -83,7 +81,7 @@ body {
 {
 	width: 27px;
 }
-.date-picker-wrapper .month-wrapper table tbody div:hover
+.date-picker-wrapper .month-wrapper table tbody td>div:hover
 {
 	background: #345;
 }
@@ -107,11 +105,36 @@ body {
 	background-color: #258;
 }
 .date-picker-wrapper .month-wrapper table .day.invalid.hovering,
-.date-picker-wrapper .month-wrapper table .day.invalid.checked
+.date-picker-wrapper .month-wrapper table .day.invalid.checked,
+.date-picker-wrapper .month-wrapper table .day.unselectable.hovering,
+.date-picker-wrapper .month-wrapper table .day.unselectable.checked
 {
-	color: #222;
+	color: #A60 !important;
+	background-color: #420;
 }
-.date-picker-wrapper .month-wrapper table .invalid:hover
+.date-picker-wrapper .month-wrapper table .day.invalid.range-start,
+.date-picker-wrapper .month-wrapper table .day.invalid.range-end,
+.date-picker-wrapper .month-wrapper table .day.unselectable.range-start,
+.date-picker-wrapper .month-wrapper table .day.unselectable.range-end
+{
+	background-color: #620 !important;
+}
+.date-picker-wrapper .month-wrapper table .day.skipped.hovering,
+.date-picker-wrapper .month-wrapper table .day.skipped.checked
+{
+	color: #359 !important;
+	background-color: #204080;
+}
+.date-picker-wrapper .month-wrapper table .invalid,
+.date-picker-wrapper .month-wrapper table .unselectable,
+.date-picker-wrapper .month-wrapper table .skipped
+{
+	color: #456 !important;
+	cursor: default !important;
+}
+.date-picker-wrapper .month-wrapper table .invalid:hover,
+.date-picker-wrapper .month-wrapper table .unselectable:hover,
+.date-picker-wrapper .month-wrapper table .skipped:hover
 {
 	background: transparent;
 }
@@ -121,19 +144,6 @@ body {
 	line-height: 20px;
 	font-weight: 100;
 	text-transform: uppercase;
-}
-.date-picker-wrapper .month-wrapper table .day.has-tooltip
-{
-	cursor: help !important;
-}
-.date-picker-wrapper .time label
-{
-	white-space: nowrap;
-	display: initial;
-}
-.date-picker-wrapper .time input
-{
-	display: initial;
 }
 .date-picker-wrapper .month-wrapper table .day.toMonth.valid
 {
@@ -157,10 +167,46 @@ body {
 {
 	background-color: #55F;
 }
+.date-picker-wrapper .month-wrapper table .day.real-today.invalid
+{
+	background-color: #226;
+}
 .date-picker-wrapper .month-wrapper table .day.real-today.checked,
 .date-picker-wrapper .month-wrapper table .day.real-today.hovering
 {
-	background-color: #77F;
+	background-color: #44C;
+}
+.date-picker-wrapper .month-wrapper table .day.real-today.invalid.checked,
+.date-picker-wrapper .month-wrapper table .day.real-today.invalid.hovering
+{
+	background-color: #426;
+}
+.date-picker-wrapper .month-wrapper table .range-start,
+.date-picker-wrapper .month-wrapper table .range-end
+{
+	background-color: #48A !important;
+	color: white !important;
+}
+.date-picker-wrapper .month-wrapper table .week-number
+{
+	padding: 5px 0;
+	line-height: 1;
+	font-size: 12px;
+	margin-bottom: 1px;
+	color: #38C;
+	cursor: pointer;
+}
+.date-picker-wrapper .month-wrapper table .week-ranged
+{
+	color: #49E;
+	background: #456;
+	font-weight: bold;
+}
+.date-picker-wrapper .month-wrapper table .week-ranged.invalid,
+.date-picker-wrapper .month-wrapper table .week-ranged.unselectable
+{
+	color: #C66 !important;
+	background: #433;
 }
 .date-picker-wrapper table .caption
 {
@@ -249,6 +295,12 @@ body {
 	background-color: #345;
 	z-index: 3;
 }
+.date-picker-wrapper .spacer
+{
+	clear: both;
+	height: 0;
+	font-size: 0;
+}
 .date-picker-wrapper .selected-days
 {
 	display: none;
@@ -317,56 +369,9 @@ body {
 	background: #246;
 	box-shadow: inset -1px -2px 6px #69C;
 }
-/*time styling*/
-.date-picker-wrapper .time
-{
-	position: relative;
-}
-.date-picker-wrapper.single-month .time
-{
-	display: block;
-}
-.date-picker-wrapper .time input[type=range]
-{
-	vertical-align: middle;
-	width: 129px;
-	padding: 0;
-	margin: 0;
-	height: 20px;
-}
-.date-picker-wrapper .time1,
-.date-picker-wrapper .time2
-{
-	width: 180px;
-	padding: 0 5px;
-	text-align: center;
-}
-.date-picker-wrapper .time1
-{
-	float: left;
-}
-.date-picker-wrapper .time2
-{
-	float: right;
-}
-.date-picker-wrapper .hour,
-.date-picker-wrapper .minute
-{
-	text-align: right;
-}
 .date-picker-wrapper .hide
 {
 	display: none;
-}
-.date-picker-wrapper .first-date-selected
-{
-	background-color: #48A !important;
-	color: white !important;
-}
-.date-picker-wrapper .last-date-selected
-{
-	background-color: #48A !important;
-	color: white !important;
 }
 .date-picker-wrapper .date-range-length-tip
 {
@@ -398,21 +403,6 @@ body {
 .date-picker-wrapper.two-months.no-gap .month2 .prev
 {
 	display: none;
-}
-.date-picker-wrapper .week-number
-{
-	padding: 5px 0;
-	line-height: 1;
-	font-size: 12px;
-	margin-bottom: 1px;
-	color: #888;
-	cursor: pointer;
-}
-.date-picker-wrapper .week-number.week-number-selected
-{
-	color: #49E;
-	background: #456;
-	font-weight: bold;
 }
 .date-picker-wrapper div.shortcuts {
 	white-space: nowrap;
